# lte_scenario_toolkit

./: .gitattributes  .gitignore  LICENSE  README.md  download_newyork_1m_dem.py  generate_scenario_figures.py  pyproject.toml  select_sites.py
.github/workflows/: ci.yml
boundary_shp/: README.md
boundary_shp/Arizona_Maricopa_Phoenix/: Arizona_Maricopa_Phoenix.dbf  Arizona_Maricopa_Phoenix.sbn  Arizona_Maricopa_Phoenix.sbx  Arizona_Maricopa_Phoenix.shp  Arizona_Maricopa_Phoenix.shp.xml  Arizona_Maricopa_Phoenix.shx
boundary_shp/Chicago/: Chicago_Boundary.dbf  Chicago_Boundary.sbn  Chicago_Boundary.sbx  Chicago_Boundary.shp  Chicago_Boundary.shp.xml  Chicago_Boundary.shx
boundary_shp/Chicago_CBD/: Chicago_CBD.dbf
boundary_shp/Massachusetts_Middlesex_Cambridge/: Massachusetts_Middlesex_Cambridge.dbf  Massachusetts_Middlesex_Cambridge.sbn  Massachusetts_Middlesex_Cambridge.sbx  Massachusetts_Middlesex_Cambridge.shp  Massachusetts_Middlesex_Cambridge.shp.xml  Massachusetts_Middlesex_Cambridge.shx
boundary_shp/NewYorkState_NewYork/: NewYorkState_NewYork.dbf  NewYorkState_NewYork.sbn  NewYorkState_NewYork.sbx  NewYorkState_NewYork.shp  NewYorkState_NewYork.shp.xml  NewYorkState_NewYork.shx
configs/: README.md  example.yaml  newyork.yaml
data/: README.md  datasets.yaml  manifest.json
data/examples/: README.md
dem/: README.md
docs/designs/: 2026-07-16-modern-gui-and-selection-workflow-design.md  2026-07-16-scenario-data-lifecycle-design.md  2026-07-18-canvas-station-rendering-design.md  2026-07-18-production-gui-overhaul-design.md  2026-07-19-cartographic-workstation-ui-design.md  2026-07-19-run-history-trash-design.md
gee/: newyork_1m_dem.js
points_shp/USA_Clear_LTE_Base_Station/: USA_Clear_LTE_Base_Station.dbf  (+5 more)
runs/: README.md
runs/templates/: RUN.md  (+1 more)
scripts/: README.md  benchmark_candidate_scan.py  create_data_manifest.py  download_newyork_1m_dem.py  generate_scenario_figures.py  manage_data.py  select_sites.py
src/: README.md  __init__.py  spatial.py
tests/: README.md  conftest.py  test_boundary_data.py  test_candidate_cache.py  test_candidate_scanner.py  test_cli.py  test_config.py  test_current_only_model.py  test_data_catalog.py  test_data_validation.py  test_dem_data.py  test_figure_service.py  test_generate_figures.py  test_gui.py  test_io.py  test_jobs.py  test_map_assets.py  test_profiles.py  test_repository_baseline.py  test_run_service.py  test_run_trash.py  test_scenario.py  test_scenario_previews.py  test_select_sites.py  test_selection_service.py  test_spatial.py  test_terrain.py  test_visualization.py  test_web_selector.py
(+55 files in other folders)
