[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lte_scenario_toolkit"
version = "0.1.0"
description = "Reproducible LTE base-station scenario generation with administrative boundaries and DEM terrain data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Elinsa Enos" }]
dependencies = [
  "earthengine-api>=1.6",
  "geemap>=0.35",
  "geopandas>=1.0",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.0",
  "plotly>=5.20",
  "PyYAML>=6.0",
  "rasterio>=1.3",
  "shapely>=2.0",
]

[project.scripts]
lte-select-sites = "lte_scenario_toolkit.select_sites:main"
lte-generate-figures = "lte_scenario_toolkit.generate_figures:main"
lte-data = "lte_scenario_toolkit.data_cli:main"
lte-gui = "lte_scenario_toolkit.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
lte_scenario_toolkit = ["gui/assets/*.css"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]
gui = [
  "nicegui>=3.14,<4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
main_file = ""

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
